<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linerForUsersInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/shtukatur"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/userManual"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userManual1point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userManual1point"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/manualImage1"
            android:layout_width="400dp"
            android:layout_height="400dp"

            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/userManual2point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userManual2point"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/manualImage2"
            android:layout_width="400dp"
            android:layout_height="400dp"

            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/userManual3point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userManual3point"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/manualImage3"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/userManual4point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userManual4point"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/userManual7point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userManual7point"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/manualImage7"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal" />


        <TextView
            android:id="@+id/userManual5point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userManual5point"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/userManual6point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userManual6point"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/userManual9point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userManual9point"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/userManual8point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/userManual8point"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/manualImage8"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal" />


        <Button

            android:id="@+id/btnFromManual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:text="@string/btnManual" />


    </LinearLayout>


</ScrollView>