<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgr"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonForParsing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Find"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textForParsing" />

    <EditText
        android:id="@+id/textForParsing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/hintInRequest"
        android:inputType="textPersonName"
        android:textAlignment="center"

        android:textSize="30dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:windowSoftInputMode="adjustPan"
        android:focusableInTouchMode="true"
        android:focusable="true"


        />

    <TextView

        android:id="@+id/textShopsAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForParsing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_user_manual"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/userManual"
            android:textSize="10dp"/>

        <Button
            android:id="@+id/rateApp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/rateApp"
            android:textSize="10dp"/>


        <Button
            android:id="@+id/changeUser"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/changeUser"
            android:textSize="10dp"/>


    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>